github actions; first cut

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -33,5 +33,5 @@ jobs:
                   vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
                   vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
                   vercel-args: "--prod"
-                  working-directory: target
+                  working-directory: ./target
                   vercel-project-name: leptail
