--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -23,6 +23,10 @@ jobs:
                   toolchain: stable
                   target: wasm32-unknown-unknown
                   override: true
+            - name: Install Cargo BInstall
+              uses: cargo-bins/cargo-binstall@main
+            - name: Install Cargo Leptos
+              run: cargo binstall cargo-leptos -y
             - name: Build
               run: | 
                   cargo leptos build --release
