--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -20,16 +20,16 @@ jobs:
             - name: Setup Rust
               uses: actions-rs/toolchain@v1
               with:
-                  toolchain: stable
+                  toolchain: nightly
                   target: wasm32-unknown-unknown
-                  override: true
+                  override: true  
             - name: Install Cargo BInstall
               uses: cargo-bins/cargo-binstall@main
             - name: Install Cargo Leptos
               run: cargo binstall cargo-leptos -y
             - name: Build
               run: | 
-                  cargo leptos build --release
+                  cargo leptos build --release --features nightly
             - name: Deploy
               uses: amondnet/vercel-action@v20
               with:
