drawer variant refactorig: partial

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ lto = true
 opt-level = 'z'
 
 [workspace.dependencies]
-leptos = { version = "0.6.5", features = ["nightly"] }
-leptos_meta = { version = "0.6.5", features = ["nightly"] }
-leptos_router = { version = "0.6.5", features = ["nightly"] }
-leptos_axum = { version = "0.6.5" }
+leptos = { version = "0.6.9", features = ["nightly"] }
+leptos_meta = { version = "0.6.9", features = ["nightly"] }
+leptos_router = { version = "0.6.9", features = ["nightly"] }
+leptos_axum = { version = "0.6.9" }
 leptos_icons = { version = "0.3.0", features = [] }
 icondata = "0.3.0"
 
@@ -20,15 +20,20 @@ cfg-if = "1.0.0"
 console_error_panic_hook = "0.1.7"
 console_log = "1.0.0"
 http = "1"
-log = "0.4.17"
-simple_logger = "4.1.0"
-thiserror = "1.0.40"
-tokio = { version = "1.26.0", features = ["full"] }
+log = "0.4.21"
+simple_logger = "4.3.3"
+thiserror = "1.0.58"
+tokio = { version = "1.36.0", features = ["full"] }
 tower = { version = "0.4.13", features = ["full"] }
 tower-http = { version = "0.5", features = ["full"] }
 wasm-bindgen = "=0.2.87"
 web-sys = "0.3.64"
 
+# sutttle related
+# shuttle deploment is not working properly; 
+# follow the reference here https://github.com/leptos-community/deployment-ssr-shuttle
+shuttle-runtime = { version = "0.41.0", default-features = false }
+shuttle-axum = { version = "0.41.0" }
 
 # See https://github.com/akesson/cargo-leptos for documentation of all the parameters.
 
