--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,3 +16,7 @@ tokio.workspace = true
 tower.workspace = true
 tower-http.workspace = true
 log.workspace = true
+
+# sutttle related
+# may need to define the SSR features and dependencies; refer https://github.com/leptos-community/deployment-ssr-shuttle/blob/main/Cargo.toml
+shuttle-runtime.workspace = true
