--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,17 @@
 [workspace]
 members = ["leptail", "tailwind-utils", "theme-moonlight", "theme-gradiance", "app", "frontend", "server"]
+#workspace.resolver = "2"
 
 # build 
-[build]
-rustflags = ["-Z", "threads=8"]
+# [build]
+# rustflags = ["-Z", "threads=8"]
 
 # profiles
-[profile.dev]
-opt-level = 1
+# [profile.dev]
+# opt-level = 1
 
-[profile.dev.package."*"]
-opt-level = 3
+# [profile.dev.package."*"]
+# opt-level = 3
 
 [profile.release]
 # need to be applied only to wasm build
