--- a/theme-moonlight/Cargo.toml
+++ b/theme-moonlight/Cargo.toml
@@ -10,3 +10,4 @@ leptail = { path = "../leptail" }
 leptail-tailwind-utils = { path = "../tailwind-utils" }
 leptos_icons = { workspace = true }
 icondata = { workspace = true }
+tailwind_fuse = { workspace = true }
