--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ leptos_router = { version = "0.6.9", features = ["nightly"] }
 leptos_axum = { version = "0.6.9" }
 leptos_icons = { version = "0.3.0", features = [] }
 icondata = "0.3.0"
+tailwind_fuse = { version = "0.2.0" }
 
 axum = "0.7"
 cfg-if = "1.0.0"
