--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -33,8 +33,8 @@ icondata = "0.3.0"
 tailwind_fuse = { version = "0.3.0" }
 
 leptail = { path = "../leptail" }
-leptail-theme-moonlight = { path = "../theme-moonlight" }
-leptail-theme-gradiance = { path = "../theme-gradiance" }
+leptail_theme_moonlight = { path = "../theme-moonlight" }
+leptail_theme_gradiance = { path = "../theme-gradiance" }
 
 
 axum = "0.7"
