--- a/theme-moonlight/Cargo.toml
+++ b/theme-moonlight/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "leptail-theme-moonlight"
+name = "leptail_theme_moonlight"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 leptail = { path = "../leptail" }
+# TODO: change the path name to snake case instead of hyphenated path 
 leptail-tailwind-utils = { path = "../tailwind-utils" }
 leptos_icons = { workspace = true }
 icondata = { workspace = true }
