--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,18 @@
 [workspace]
-members = ["leptail", "tailwind-utils", "theme-moonlight", "theme-gradiance"]
+members = [
+    "leptail",
+    "tailwind-utils",
+    "theme-moonlight",
+    "theme-gradiance",
+    "leptail_build",
+]
 
 # dependencies
 [workspace.dependencies]
-leptos = { version = "0.6", features = ["nightly"] }
-leptos_meta = { version = "0.6", features = ["nightly"] }
-leptos_router = { version = "0.6", features = ["nightly"] }
-leptos_axum = { version = "0.6" }
+leptos = { version = "0.6.12", features = ["nightly"] }
+leptos_meta = { version = "0.6.12", features = ["nightly"] }
+leptos_router = { version = "0.6.12", features = ["nightly"] }
+leptos_axum = { version = "0.6.12" }
 leptos_icons = { version = "0.3.0", features = [] }
 icondata = "0.3.0"
 tailwind_fuse = { version = "0.3.0" }
