--- a/demo/app/Cargo.toml
+++ b/demo/app/Cargo.toml
@@ -2,6 +2,10 @@
 name = "app"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
+
+[build-dependencies]
+leptail_build = { path = "../../leptail_build" }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -26,4 +30,3 @@ leptail_theme_gradiance = { workspace = true }
 default = []
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
 ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]
-
