--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ demo/end2end/playwright-report/
 demo/playwright/.cache/
 demo/package.json
 demo/pnpm-lock.yaml
+demo/style/stylance
+demo/style/bundle.scss
 
 # framework related
 /demo/public/main.scss
