demo: open props installed locally and used in the css modules(stylance)

--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -71,7 +71,7 @@ codegen-units = 1
 # that are used together frontend (lib) & server (bin)
 [[workspace.metadata.leptos]]
 # this name is used for the wasm, js and css file names
-name = "start-axum-workspace"
+name = "leptail-demo"
 
 # the package in the workspace that contains the server binary (binary crate)
 bin-package = "server"
