--- a/demo/server/Cargo.toml
+++ b/demo/server/Cargo.toml
@@ -17,6 +17,8 @@ tokio.workspace = true
 tower.workspace = true
 tower-http.workspace = true
 log.workspace = true
+rust-embed.workspace = true
+# memory-serve.workspace = true
 
 # sutttle related
 # may need to define the SSR features and dependencies; refer https://github.com/leptos-community/deployment-ssr-shuttle/blob/main/Cargo.toml
